feat- Setting up columns width

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Let's start <span>getting a little</span> more fancy!</h1>
       <img src="/images/elephants.jpg" alt="" />
       <div class="columns">
-        <div class="col">
+        <div class="col col-1">
           <h2>dolor sit</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero eius
@@ -21,7 +21,7 @@
             Quidem, dolores voluptate.
           </p>
         </div>
-        <div class="col">
+        <div class="col col-2">
           <h2>consectetur adipisicing</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Id rerum
@@ -36,7 +36,7 @@
             corrupti at.
           </p>
         </div>
-        <div class="col col-right">
+        <div class="col col-1 col-right">
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit iusto
             voluptates esse neque modi fugit vitae itaque a iure praesentium,
@@ -46,7 +46,7 @@
         </div>
       </div>
       <div class="columns">
-        <div class="col">
+        <div class="col col-3">
           <h2>Lorem ipsum dolor sit amet consectetur</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, quos.
@@ -55,7 +55,7 @@
             enim.
           </p>
         </div>
-        <div class="col col-right">
+        <div class="col col-1 col-right">
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
             accusamus labore aliquam itaque a eveniet debitis inventore ducimus!
